# LiveGrapher

./: .cproject  .gitignore  .gitreview  .project  .styleguide  CMakeLists.txt  COPYING  LiveGrapher.pro  LiveGrapher.qrc  MainWindow.ui  README.md  Resources.rc  format-code.sh  format.sh  project.config  publish-win32.sh  uncrustify.cfg
.github/workflows/: ci.yml
Debug/: IPSettings.txt
Release/: IPSettings.txt
common/: Protocol.hpp
fmt/: CMakeLists.txt  CMakeLists.txt.in
host/LiveGrapher/: GraphHost.cpp  GraphHost.hpp  GraphHost.inl  GraphHost.md  LiveGrapher.cpp  Protocol.hpp  SocketConnection.cpp  SocketConnection.hpp  SocketConnection.inl
src/: CheckDialog.cpp  CheckDialog.hpp  Graph.cpp  Graph.hpp  LiveGrapher.manifest  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Protocol.hpp  Resource.h  Resources.rc  Resources.res  SelectDialog.cpp  SelectDialog.hpp  Settings.cpp  Settings.hpp  WindowVars.cpp  WindowVars.hpp  qcustomplot.cpp  qcustomplot.h
src/SFML/: Config.hpp
src/SFMLGraphics/: ImageLoader.cpp
src/SFMLNetwork/: Packet.cpp  Socket.cpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
src/SFMLSystem/: Err.cpp  Thread.cpp  ThreadLocal.cpp
src/WinGDI/: Drawable.cpp  Drawable.hpp  Graph.cpp  Graph.hpp  ProgressBar.cpp  ProgressBar.hpp  RectangleShape.cpp  RectangleShape.hpp  StatusLight.cpp  StatusLight.hpp  Text.cpp  Text.hpp  UIFont.cpp  (+2 more)
test/: CMakeLists.txt  Makefile
test/src/: Main.cpp  ProfileBase.cpp  ProfileBase.hpp  SCurveProfile.cpp  SCurveProfile.hpp  TrapezoidProfile.cpp  TrapezoidProfile.hpp
(+48 files in other folders)
